Update school name and contact details in Index.html

--- a/Index.html
+++ b/Index.html
@@ -827,7 +827,7 @@
                             <h3>Student Management System</h3>
                             <div class="dashboard-preview">
                                 <div class="dashboard-row">
-                                    <div class="dashboard-label">Jasper Elite School</div>
+                                    <div class="dashboard-label">Palompon Institute Of Technology Tabango</div>
                                 </div>
                                 <div class="dashboard-row">
                                     <div class="dashboard-label">Student Count</div>
@@ -972,21 +972,21 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>contact@rhyziltech.com</p>
+                            <p>busineesrhyziltech@gmai.com</p>
                         </div>
                     </div>
                     <div class="contact-detail">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Phone</h3>
-                            <p>+63 912 345 6789</p>
+                            <p>+09637304588</p>
                         </div>
                     </div>
                     <div class="contact-detail">
                         <i class="fas fa-clock"></i>
                         <div>
                             <h3>Working Hours</h3>
-                            <p>Monday - Friday: 9AM - 6PM</p>
+                            <p>Monday - Friday: 8AM - 5PM</p>
                         </div>
                     </div>
                 </div>
