Fix testimonial formatting in Index.html

--- a/Index.html
+++ b/Index.html
@@ -448,7 +448,7 @@
                         <i class="fas fa-quote-left" style="color: var(--accent);"></i>
                         <p style="font-style: italic;"> Rhyzil reviewed my site and fixed security headers I didn't even know existed. Like having Tim Berners-Lee check your work. 10/10."
 
-– Maya Rodriguez, Designer at Studio Bloom <strong>placeholder testimonial</strong></p>
+– Maya Rodriguez, Designer at Studio Bloom <strong> </strong></p>
                     </div>
                 </div>
                 <div style="display: flex; flex-direction: column; gap: 25px;">
