Update contact address in Index.html

--- a/Index.html
+++ b/Index.html
@@ -645,7 +645,7 @@
                 <div>
                     <div class="contact-detail"><i class="fas fa-envelope" style="font-size: 2rem; color: var(--primary);"></i> <span style="font-size: 1.1rem; word-break: break-all;">businessrhyziltech@gmail.com</span></div>
                     <div class="contact-detail"><i class="fas fa-phone-alt"></i> <span>+63 993 679 6302</span></div>
-                    <div class="contact-detail"><i class="fas fa-map-pin"></i> <span>Palompon, PH (remote)</span></div>
+                    <div class="contact-detail"><i class="fas fa-map-pin"></i> <span>Crossing Otabon Tabango Leyte</span></div>
                     <div style="background: #1a2340; border-radius: 30px; padding: 25px; margin-top: 20px;"><i class="fas fa-clock"></i> response: &lt;12h</div>
                 </div>
             </div>
