Update config success message in Index.html
Remove email address from configuration success message.

--- a/Index.html
+++ b/Index.html
@@ -704,7 +704,7 @@
             // Update config note
             const configNote = document.getElementById('configNote');
             configNote.className = 'config-note config-success';
-            configNote.innerHTML = '<i class="fas fa-check-circle"></i> ✅ EmailJS fully configured! Messages will be sent to businessrhyziltech@gmail.com';
+            configNote.innerHTML = '<i class="fas fa-check-circle"></i>;
 
             // Initialize EmailJS with your public key
             if (typeof emailjs !== 'undefined' && emailjs.init) {
