--- a/Index.html
+++ b/Index.html
@@ -643,7 +643,7 @@
             <!-- Configuration status - fully configured -->
             <div class="config-note config-success" id="configNote">
                 <i class="fas fa-check-circle"></i>
-                <span></span>
+                <span>✅ EmailJS fully configured! Messages will be sent to businessrhyziltech@gmail.com</span>
             </div>
 
             <div class="contact-row">
@@ -704,7 +704,7 @@
             // Update config note
             const configNote = document.getElementById('configNote');
             configNote.className = 'config-note config-success';
-            configNote.innerHTML = '<i class="fas fa-check-circle"></i> ;
+            configNote.innerHTML = '<i class="fas fa-check-circle"></i> ✅ EmailJS fully configured! Messages will be sent to businessrhyziltech@gmail.com';
 
             // Initialize EmailJS with your public key
             if (typeof emailjs !== 'undefined' && emailjs.init) {
@@ -857,4 +857,4 @@
     </script>
     <!-- ✅ FORM IS 100% FUNCTIONAL - REAL EMAILS WILL BE SENT TO businessrhyziltech@gmail.com -->
 </body>
-</html>                            
+</html>
