Remove EmailJS configuration success message
Removed the success message for EmailJS configuration.

--- a/Index.html
+++ b/Index.html
@@ -643,7 +643,7 @@
             <!-- Configuration status - fully configured -->
             <div class="config-note config-success" id="configNote">
                 <i class="fas fa-check-circle"></i>
-                <span>✅ EmailJS fully configured! Messages will be sent to businessrhyziltech@gmail.com</span>
+                <span></span>
             </div>
 
             <div class="contact-row">
