Update EmailJS template ID in Index.html

--- a/Index.html
+++ b/Index.html
@@ -724,7 +724,7 @@
             // ========== YOUR COMPLETE EMAILJS CREDENTIALS ==========
             const PUBLIC_KEY = 'UV2MXRtD7FcyZXQ3F';        // Your EmailJS public key
             const SERVICE_ID = 'service_ad1l4qy';         // Your Gmail service ID
-            const TEMPLATE_ID = 'template_jtw8dbq';       // Your template ID
+            const TEMPLATE_ID = 'template_mphmqzv';       // Your template ID
 
             // Initialize EmailJS with your public key
             if (typeof emailjs !== 'undefined' && emailjs.init) {
